--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <footer id="contact">
       <h2 class="title">Contato</h2>
       <div>
-        <a href="{{link_instagram}}" target="_blank">
+        <a href="https://www.instagram.com/carolinegomesdasilv/?next=%2F" target="_blank">
           <!-- Ícone do Instagram -->
           <img class="img-logo" src="imagens/instagram.jpeg" alt="Logo do site" />
           <svg width="32" height="32" fill="#fff" class="bi bi-instagram">
