--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </svg>
         </a>
         
-        <a href="{{link_github}}" target="_blank">
+        <a href="https://github.com/caroline0107/Meu-Projeto-2/tree/main" target="_blank">
           <!-- Ícone do GitHub -->
           <img class="img-logo" src="imagens/github.jpeg" alt="Logo do site" />
           <svg width="32" height="32" fill="#fff" class="bi bi-github">
